--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,6 +3,7 @@
     "com.unity.cinemachine": "3.1.3",
     "com.unity.feature.2d": "2.0.1",
     "com.unity.multiplayer.center": "1.0.0",
+    "com.unity.postprocessing": "3.4.0",
     "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.10",
     "com.unity.ugui": "2.0.0",
     "com.unity.modules.accessibility": "1.0.0",
